@@ -5,7 +5,7 @@ use strict;
 use vars qw{$VERSION @ISA};
 BEGIN {
 	$VERSION = '1.06';
-	@ISA = 'File::ShareDir';
+	@ISA     = 'File::ShareDir';
 }
 
 1;
